# simulasi-koperasi-jjjlabs

./: .gitignore  README.md  package.json  pnpm-lock.yaml
apps/: backent-prd.md  scenarios.md
apps/backend/: .env.example  CLAUDE.md  CONTRACT.md  README.md  pyproject.toml
apps/backend/api/: server.py
apps/backend/voice_worker/: auditor.py  mentor.py  observer.py  scenarios.py  voice_agent.py
apps/backend/voice_worker/prompts/: keanggotaan_fiktif.py  kredit_macet.py  rat_darma.py  rat_sri.py  tutorial.py
apps/web/: .env.example  README.md  eslint.config.js  index.html  package.json  tsconfig.json
apps/web-sementara/: .env.example  README.md  eslint.config.js  index.html  package.json  tsconfig.json
apps/web-sementara/src/: main.tsx  vite-env.d.ts
apps/web-sementara/src/app/: App.tsx
apps/web-sementara/src/components/: DocumentPanel.tsx  DriftDebug.tsx  DriftMeter.tsx  FinalDecisionButton.tsx  HintButton.tsx  HintPanel.tsx  LpjPanel.tsx  MicButton.tsx  PhaseBar.tsx  ResultPanel.tsx  ScenarioCard.tsx  SessionBriefing.tsx  TextInputBar.tsx  TranscriptItemRow.tsx  TranscriptPanel.tsx
apps/web-sementara/src/config/: env.ts
apps/web-sementara/src/scenarios/: catalog.ts  documents.ts  lpj.ts
apps/web-sementara/src/session/: controller.ts  sessionController.ts
apps/web-sementara/src/stores/: session.store.ts
apps/web-sementara/src/styles/: index.css
apps/web-sementara/src/transport/: contract.provisional.ts  createTransport.ts
apps/web-sementara/src/views/: ScenarioMenuView.tsx  (+1 more)
apps/web/public/: site.webmanifest
apps/web/tools/: tile-inspect.py
(+90 files in other folders)
